--- a/dev/index.html
+++ b/dev/index.html
@@ -4,6 +4,7 @@
   <head>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="fisheye.js" type="text/javascript"></script>
     <script src="nyt.js" type="text/javascript"></script>
    <link rel="stylesheet" type="text/css" href="nyt.css">
   </head>
