d3 is for the ass clowns of humanity

--- a/dev/index.html
+++ b/dev/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-         
+    <p>This is an attempt to visualize articles from The New York Times. You might even say it's a Dynamic Timeline for News Articles With Interactive Exploration and Linking of Related Subjects’ Timelines.</p> 
     <h1>Barack Obama</h1>
     <svg class="donut"></svg>
            
