--- a/dev/index.html
+++ b/dev/index.html
@@ -12,7 +12,7 @@
   <body>
     <p>This is an attempt to visualize articles from The New York Times. You might even say it's a Dynamic Timeline for News Articles With Interactive Exploration and Linking of Related Subjects’ Timelines.</p> 
     <h1>Barack Obama</h1>
-    <svg class="donut"></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" class="donut"></svg>
            
 
   </body>
