One tweak to the index file.

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ sup {
 	}
 }
 </style>
-<title>Live Demo</title>
+<title>Nested Year Timelines (NYT)</title>
 
 </head>
 <body>
@@ -188,6 +188,8 @@ sup {
 <p>Again, check out the live version of NYT at <a href="http://keynotesavant.com/">keynotesavant.com</a> if you haven't already.</p>
 
 <p>If you're about to clone this repository and try to get this working on your own, keep reading.</p>
+
+<p>First, get the code at GitHub: <a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann">https://github.com/CSE512-14W/fp-mbesweth-kohlmann</a></p>
 
 <h3>System Requirements</h3>
 
