Whoops, bad LICENSE link.

--- a/index.html
+++ b/index.html
@@ -272,6 +272,6 @@ Loaded cached queries from disk.
 
 <h2>License</h2>
 
-<p>It's <a href="http://en.wikipedia.org/wiki/BSD_licenses#3-clause_license_.28.22Revised_BSD_License.22.2C_.22New_BSD_License.22.2C_or_.22Modified_BSD_License.22.29">BSD-new</a>, dude. Read our license here: <a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann/raw/master/LICENSE">LICENSE</a></p>
+<p>It's <a href="http://en.wikipedia.org/wiki/BSD_licenses#3-clause_license_.28.22Revised_BSD_License.22.2C_.22New_BSD_License.22.2C_or_.22Modified_BSD_License.22.29">BSD-new</a>, dude. Read our license here: <a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann/raw/master/LICENSE.txt">LICENSE</a></p>
 </body>
 </html>
