More bad links…now fixed.

--- a/index.html
+++ b/index.html
@@ -180,8 +180,9 @@ sup {
 </ul>
 
 
-<p><a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann/raw/master/final/poster-mbesweth-kohlmann.pdf">Poster</a>,
-<a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann/raw/master/final/paper-mbesweth-kohlmann">Final Paper</a></p>
+<h2><a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann/raw/master/final/poster-mbesweth-kohlmann.pdf">Poster</h2>
+
+<h2><a href="https://github.com/CSE512-14W/fp-mbesweth-kohlmann/raw/master/final/paper-mbesweth-kohlmann.pdf">Final Paper</a></h2>
 
 <h2>Running Instructions</h2>
 
