A single character typo I couldn't possible let go.

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ sup {
 
 <p><a href="http://stewed.co/">Michael Beswetherick</a>, <a href="https://kohlmannj.com/">Joe Kohlmann</a> {mbesweth,kohlmann}@uw.edu</p>
 
-<p>Nested Year Timelines is a hierarchical timeline visualization that supports exploring large sets of news article retrieved from the <a href="http://developer.nytimes.com/docs/read/article_search_api_v2">New York Times Article Search API</a>.</p>
+<p>Nested Year Timelines is a hierarchical timeline visualization that supports exploring large sets of news articles retrieved from the <a href="http://developer.nytimes.com/docs/read/article_search_api_v2">New York Times Article Search API</a>.</p>
 
 <p><a href="http://keynotesavant.com/"><img src="Teaser2Small.png" alt="Teaser Graphic" style="display: block; margin: 0 auto; width: 85%; height: auto;"/></a></p>
 
